Addition of Image Placeholders and Minor Alignment Fixes

--- a/public/index.css
+++ b/public/index.css
@@ -43,7 +43,7 @@ body {
 #header {
   background-color:  white; /* Change to blue color */
   text-align: center;
-  margin-left: 245px; 
+  margin-left: 325px;  
   color: black;
   padding: 20px 0;
   text-align: center;
@@ -52,6 +52,7 @@ body {
   letter-spacing: 1px;
   text-transform: uppercase;
   margin-top: 60px;
+  justify-content: center;
 }
 
 .view-on .view-on-option {
@@ -110,7 +111,7 @@ body {
 #imageArea {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   margin: auto;
 }
 
@@ -131,10 +132,11 @@ body {
 }
 
 .image-display {
-  width: 100%;
-  height: auto;
+  width: 312px; /* Rendered width */
+  height: 404px; /* Rendered height */
   aspect-ratio: 8.5 / 11; /* Maintain the aspect ratio */
   object-fit: contain; /* To maintain aspect ratio of the image */
+  margin: auto;
 }
 
 .button-container {
@@ -378,6 +380,9 @@ code {
 .section {
   margin-bottom: 20px;
   width: 80%;
+  padding: 10px;
+  justify-content: center;
+  margin: auto;
 }
 
 
